--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.1.6",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
