--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tutorial",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
+  "proxy" : "https://foodpointbackend-7mxm.onrender.com",
   "dependencies": {
     "@clerk/clerk-react": "^5.2.4",
     "@emotion/react": "^11.11.1",
