--- a/src/config/langConfig.json
+++ b/src/config/langConfig.json
@@ -261,6 +261,10 @@
                 "en": "Checkout",
                 "hn": "चेक आउट"
             },
+            "pay": {
+                "en": "Pay",
+                "hn": "भुगतान"
+            },
             "delete": {
                 "en": "Delete",
                 "hn": "चीज़ें हटाएं"
